k8s/apps/romm/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: romm
  namespace: romm
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "RomM"
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "romm.png"
    gethomepage.dev/description: "ROM manager and player"
    gethomepage.dev/href: "https://romm.lan"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`romm.lan`)
      kind: Rule
      services:
        - name: romm-external
          port: 8085
  tls:
    secretName: romm-lan-tls
